sentence case titles

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -378,20 +378,20 @@ const path = Astro.url.pathname;
                     <h2><a href="/sta" aria-label="About">Statics</a></h2>
                         <ol style="column-fill: balance;" class="course-menu statics-menu">
                             <li><a href="/sta/introduction?origin=sidebar">Introduction</a></li>
-                            <li><a href="/sta/cartesian_coordinates?origin=sidebar">Cartesian Coordinates</a></li>
-                            <li><a href="/sta/vectors_scalars?origin=sidebar">Vectors and Scalars</a></li>
-                            <li><a href="/sta/free_body_diagrams?origin=sidebar">Free Body Diagrams</a></li>
+                            <li><a href="/sta/cartesian_coordinates?origin=sidebar">Cartesian coordinates</a></li>
+                            <li><a href="/sta/vectors_scalars?origin=sidebar">Vectors and scalars</a></li>
+                            <li><a href="/sta/free_body_diagrams?origin=sidebar">Free body diagrams</a></li>
                             <li><a href="/sta/moments?origin=sidebar">Moments</a></li>
-                            <li><a href="/sta/force_systems?origin=sidebar">Force Systems</a></li>
-                            <li><a href="/sta/reaction_forces?origin=sidebar">Reaction Forces</a></li>
+                            <li><a href="/sta/force_systems?origin=sidebar">Force systems</a></li>
+                            <li><a href="/sta/reaction_forces?origin=sidebar">Reaction forces</a></li>
                             <li><a href="/sta/trusses?origin=sidebar">Trusses</a></li>
-                            <li><a href="/sta/frames_and_machines?origin=sidebar">Frames and Machines</a></li>
-                            <li><a href="/sta/shear_moment_diagrams?origin=sidebar">Shear Force & Bending Moment Diagrams</a></li>
+                            <li><a href="/sta/frames_and_machines?origin=sidebar">Frames and machines</a></li>
+                            <li><a href="/sta/shear_moment_diagrams?origin=sidebar">Shear force & bending moment diagrams</a></li>
                             <li><a href="/sta/friction?origin=sidebar">Friction</a></li>
-                            <li><a href="/sta/centers_of_mass?origin=sidebar">Center of Mass</a></li>
-                            <li><a href="/sta/hydrostatic_fluid_pressure?origin=sidebar">Hydrostatic Fluid Pressure</a></li>
-                            <li><a href="/sta/moment_of_inertia?origin=sidebar">Moment Of Inertia</a></li>
-                            <li><a href="/sta/virtual_work?origin=sidebar">Virtual Work</a></li>
+                            <li><a href="/sta/centers_of_mass?origin=sidebar">Center of mass</a></li>
+                            <li><a href="/sta/hydrostatic_fluid_pressure?origin=sidebar">Hydrostatic fluid pressure</a></li>
+                            <li><a href="/sta/moment_of_inertia?origin=sidebar">Moment of inertia</a></li>
+                            <li><a href="/sta/virtual_work?origin=sidebar">Virtual work</a></li>
                         </ol>
                     </section>
                 </div>
@@ -406,13 +406,13 @@ const path = Astro.url.pathname;
                             <h2><a href="/dyn" aria-label="About">Dynamics</a></h2>
                                 <ol style="column-fill: balance-all;" class="course-menu dynamics-menu">
                                     <li><a href="/dyn/vectors?origin=sidebar">Vectors</a></li>
-                                    <li><a href="/dyn/vector_calculus?origin=sidebar">Vector Calculus</a></li>
-                                    <li><a href="/dyn/particle_kinematics?origin=sidebar">Particle Kinematics</a></li>
-                                    <li><a href="/dyn/particle_kinetics?origin=sidebar">Particle Kinetics</a></li>
-                                    <li><a href="/dyn/rigid_body_kinematics?origin=sidebar" style="break-inside: avoid;">Rigid Body Kinematics</a></li>
-                                    <li><a href="/dyn/rigid_body_kinetics?origin=sidebar">Rigid Body Kinetics</a></li>
-                                    <li><a href="/dyn/contact_and_rolling?origin=sidebar">Contact And Rolling</a></li>
-                                    <li><a href="/dyn/work_and_energy?origin=sidebar">Work And Energy</a></li>
+                                    <li><a href="/dyn/vector_calculus?origin=sidebar">Vector calculus</a></li>
+                                    <li><a href="/dyn/particle_kinematics?origin=sidebar">Particle kinematics</a></li>
+                                    <li><a href="/dyn/particle_kinetics?origin=sidebar">Particle kinetics</a></li>
+                                    <li><a href="/dyn/rigid_body_kinematics?origin=sidebar" style="break-inside: avoid;">Rigid body kinematics</a></li>
+                                    <li><a href="/dyn/rigid_body_kinetics?origin=sidebar">Rigid body kinetics</a></li>
+                                    <li><a href="/dyn/contact_and_rolling?origin=sidebar">Contact And rolling</a></li>
+                                    <li><a href="/dyn/work_and_energy?origin=sidebar">Work And energy</a></li>
                                 </ol>
                         </section>
                     </div>
@@ -420,26 +420,26 @@ const path = Astro.url.pathname;
             </li>
             <li class="dropdown mega nav-item " class-value="sol">
                 <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="sol">
-                    <span>Solid Mechanics</a></span>
+                    <span>Solid mechanics</a></span>
                 </a>
                 <div class="dropdown-menu tile-list px-2" id="mainnav-solids"> 
                     <div class="d-flex" >
                         <section class="tile menu white-box col">
-                            <h2><a href="/sol" aria-label="About">Solid Mechanics</a></h2>
+                            <h2><a href="/sol" aria-label="About">Solid mechanics</a></h2>
                                 <ol style="column-fill: balance;" class="course-menu solids-menu">
                                     <li><a href="/sol/stress?origin=sidebar">Stress</a></li>
                                     <li><a href="/sol/strain?origin=sidebar">Strain</a></li>
-                                    <li><a href="/sol/material_properties?origin=sidebar">Material Properties</a></li>
-                                    <li><a href="/sol/axial_loading?origin=sidebar">Axial Loading</a></li>
+                                    <li><a href="/sol/material_properties?origin=sidebar">Material properties</a></li>
+                                    <li><a href="/sol/axial_loading?origin=sidebar">Axial loading</a></li>
                                     <li><a href="/sol/torsion?origin=sidebar">Torsion</a></li>
-                                    <li><a href="/sol/shear_moment_diagrams?origin=sidebar">Shear Moment Diagrams</a></li>
+                                    <li><a href="/sol/shear_moment_diagrams?origin=sidebar">Shear moment diagrams</a></li>
                                     <li><a href="/sol/bending?origin=sidebar">Bending</a></li>
-                                    <li><a href="/sol/transverse_shear?origin=sidebar">Transverse Shear</a></li>
-                                    <li><a href="/sol/pressure_vessels?origin=sidebar">Pressure Vessels</a></li>
-                                    <li><a href="/sol/combined_loading?origin=sidebar">Combined Loading</a></li>
-                                    <li><a href="/sol/stress_transformation?origin=sidebar">Stress Transformation</a></li>
-                                    <li><a href="/sol/failure_theories?origin=sidebar">Failure Theories</a></li>
-                                    <li><a href="/sol/beam_deflection?origin=sidebar">Beam Deflection</a></li>
+                                    <li><a href="/sol/transverse_shear?origin=sidebar">Transverse shear</a></li>
+                                    <li><a href="/sol/pressure_vessels?origin=sidebar">Pressure vessels</a></li>
+                                    <li><a href="/sol/combined_loading?origin=sidebar">Combined loading</a></li>
+                                    <li><a href="/sol/stress_transformation?origin=sidebar">Stress transformation</a></li>
+                                    <li><a href="/sol/failure_theories?origin=sidebar">Failure theories</a></li>
+                                    <li><a href="/sol/beam_deflection?origin=sidebar">Beam deflection</a></li>
                                     <li><a href="/sol/buckling?origin=sidebar">Buckling</a></li>
                                 </ol>
                         </section>
@@ -455,11 +455,11 @@ const path = Astro.url.pathname;
                         <section class="tile menu white-box col">
                             <h2><a href="/thermodynamics" aria-label="About">Thermodynamics</a></h2>
                                 <ol style="column-fill: balance;" class="course-menu solids-menu">
-                                    <li><a href="/thermodynamics/thermodynamic_systems?origin=sidebar">Thermodynamic Systems</a></li>
+                                    <li><a href="/thermodynamics/thermodynamic_systems?origin=sidebar">Thermodynamic systems</a></li>
                                     <li><a href="/thermodynamics/substances?origin=sidebar">Substances</a></li>
-                                    <li><a href="/thermodynamics/heat_and_work?origin=sidebar">Heat and Work</a></li>
-                                <li><a href="/thermodynamics/mass_and_energy_balances?origin=sidebar">Mass and Energy Balances</a></li>
-                                    <li><a href="/thermodynamics/complex_problems?origin=sidebar">Complex Problems</a></li>
+                                    <li><a href="/thermodynamics/heat_and_work?origin=sidebar">Heat and work</a></li>
+                                <li><a href="/thermodynamics/mass_and_energy_balances?origin=sidebar">Mass and energy balances</a></li>
+                                    <li><a href="/thermodynamics/complex_problems?origin=sidebar">Complex problems</a></li>
                                     <li><a href="/thermodynamics/thermodynamic_devices?origin=sidebar">Thermodynamic devices</a></li>
                                     <li><a href="/thermodynamics/entropy?origin=sidebar">Entropy</a></li>
                                     <li><a href="/thermodynamics/cycles?origin=sidebar">Cycles</a></li>
@@ -470,19 +470,19 @@ const path = Astro.url.pathname;
             </li>
             <li class="dropdown mega nav-item " class-value="md">
                 <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="md">
-                    <span>Mechanism Design</span>
+                    <span>Mechanism design</span>
                 </a>
                 <div class="dropdown-menu tile-list px-2" id="mainnav-<md>">
                     <div class="d-flex">
                         <section class="tile menu white-box col">
                             <h2><a href="/md">Mechanism Design</a></h2>
                             <ol style="column-fill: balance; columns: 3 <= how many columns do you want your menu to have?;" class="course-menu">
-                                <li><a href="/md/Graphical_Linkage_Synthesis?origin=sidebar">Graphical Linkage Synthesis</a></li>
-                                <li><a href="/md/Instant_Centers?origin=sidebar">Instant Centers</a></li>
+                                <li><a href="/md/Graphical_Linkage_Synthesis?origin=sidebar">Graphical linkage synthesis</a></li>
+                                <li><a href="/md/Instant_Centers?origin=sidebar">Instant centers</a></li>
                                 <li><a href="/md/Cams?origin=sidebar">Cams</a></li>
-                                <li><a href="/md/Position_Velocity_Acceleration?origin=sidebar">Position Velocity Acceleration</a></li>
-                                <li><a href="/md/Dynamic_Force_Analysis?origin=sidebar">Dynamic Force Analysis</a></li>
-                                <li><a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a></li>
+                                <li><a href="/md/Position_Velocity_Acceleration?origin=sidebar">Position velocity acceleration</a></li>
+                                <li><a href="/md/Dynamic_Force_Analysis?origin=sidebar">Dynamic force analysis</a></li>
+                                <li><a href="/md/Virtual_Work?origin=coursemenu">Virtual work</a></li>
                             </ol>
                         </section>
                     </div>
@@ -491,16 +491,16 @@ const path = Astro.url.pathname;
 
             <li class="dropdown mega nav-item" class-value="mf">
                 <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="mf">
-                    <span>Machine Failure</span>
+                    <span>Machine failure</span>
                 </a>
                 <div class="dropdown-menu tile-list px-2" id="mainnav-<md>">
                     <div class="d-flex">
                         <section class="tile menu white-box col">
                             <h2><a href="/mf">Machine Failure</a></h2>
                             <ol style="column-fill: balance; columns: 3 <= how many columns do you want your menu to have?;" class="course-menu">
-                                <li><a href="/mf/Stress_Concentrations?origin=sidebar">Stress Concentrations</a></li>
-                                <li><a href="/mf/Failure_Theories?origin=sidebar">Failure Theories</a></li>
-                                <li><a href="/mf/Threaded_Components?origin=sidebar">Threaded Components</a></li>
+                                <li><a href="/mf/Stress_Concentrations?origin=sidebar">Stress concentrations</a></li>
+                                <li><a href="/mf/Failure_Theories?origin=sidebar">Failure theories</a></li>
+                                <li><a href="/mf/Threaded_Components?origin=sidebar">Threaded components</a></li>
                             </ol>
                         </section>
                     </div>
