--- a/src/pages/dyn.astro
+++ b/src/pages/dyn.astro
@@ -16,13 +16,13 @@ import "../../public/static/css/course_home_pages.css"
   <section class="mt-sm-4 mt-2">
     <ol>
       <li><a href="/dyn/vectors?origin=coursemenu">Vectors</a></li>
-      <li><a href="/dyn/vector_calculus?origin=coursemenu">Vector Calculus</a></li>
-      <li><a href="/dyn/particle_kinematics?origin=coursemenu">Particle Kinematics</a></li>
-      <li><a href="/dyn/particle_kinetics?origin=coursemenu">Particle Kinetics</a></li>
-      <li><a href="/dyn/rigid_body_kinematics?origin=coursemenu">Rigid Body Kinematics</a></li>
-      <li><a href="/dyn/rigid_body_kinetics?origin=coursemenu">Rigid Body Kinetics</a></li>
-      <li><a href="/dyn/contact_and_rolling?origin=coursemenu">Contact And Rolling</a></li>
-      <li><a href="/dyn/work_and_energy?origin=coursemenu">Work And Energy</a></li>
+      <li><a href="/dyn/vector_calculus?origin=coursemenu">Vector calculus</a></li>
+      <li><a href="/dyn/particle_kinematics?origin=coursemenu">Particle kinematics</a></li>
+      <li><a href="/dyn/particle_kinetics?origin=coursemenu">Particle kinetics</a></li>
+      <li><a href="/dyn/rigid_body_kinematics?origin=coursemenu">Rigid body kinematics</a></li>
+      <li><a href="/dyn/rigid_body_kinetics?origin=coursemenu">Rigid body kinetics</a></li>
+      <li><a href="/dyn/contact_and_rolling?origin=coursemenu">Contact and rolling</a></li>
+      <li><a href="/dyn/work_and_energy?origin=coursemenu">Work and energy</a></li>
     </ol>    
   </section>
   <section class="mt-sm-4 mt-2">
