--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -111,7 +111,7 @@ div.grid{
     <div class="col-12 col-md-7" id="courses">
         <div id="tam2xx">
             <div class="d-flex justify-content-between flex-row title-section mt-0">
-                <h3 class="flex-shrink-1">Introductory Mechanics</h3>
+                <h3 class="flex-shrink-1">Introductory mechanics</h3>
                 <div class="form-check form-switch simp-switch ">
                     <input class="form-check-input simp-btn" type="checkbox" role="switch" onchange="toggle_simplified_view(this);">
                     <label class="form-check-label" style="text-wrap: nowrap;">Simplified view:</label>
@@ -134,7 +134,7 @@ div.grid{
                 <div class="main-cards">
                     <a href="/sol">
                         <img src="/home_page/SolidMechanicsCoverPic.png" style="background-color: white"  alt="Solid Mechanics logo" />
-                        <p>Solid Mechanics</p>
+                        <p>Solid mechanics</p>
                     </a>
                 </div>	
             </div>
@@ -142,12 +142,12 @@ div.grid{
             <ul class="mt-0 card-grid-simple">
                 <li><a href="/sta">Statics</a></li>
                 <li><a href="/dyn">Dynamics</a></li>
-                <li><a href="/sol">Solid Mechanics</a></li>
+                <li><a href="/sol">Solid mechanics</a></li>
             </ul>
         </div>
         <div id="fundamentals">
             <div class="d-flex justify-content-between flex-row title-section">
-                <h3 class="">MechSE Fundamentals</h3>
+                <h3 class="">MechSE fundamentals</h3>
                 <div class="form-check form-switch simp-switch">
                     <input class="form-check-input simp-btn" type="checkbox" role="switch" onchange="toggle_simplified_view(this);">
                     <label class="form-check-label" style="text-wrap: nowrap;">Simplified view:</label>
@@ -169,7 +169,7 @@ div.grid{
         </div>
         <div id="design">
             <div class="d-flex justify-content-between flex-row title-section">
-                <h3 class="">Mechanical Design</h3>
+                <h3 class="">Mechanical design</h3>
                 <div class="form-check form-switch simp-switch">
                     <input class="form-check-input simp-btn" type="checkbox" role="switch" onchange="toggle_simplified_view(this);">
                     <label class="form-check-label" style="text-wrap: nowrap;">Simplified view:</label>
@@ -180,20 +180,20 @@ div.grid{
                 <div class="main-cards">
                     <a href="/md">
                         <img src="/home_page/MechanismDesign.png" style="background-color: white" alt="Mechansim Design Logo" />
-                        <p>Mechanism Design</p>
+                        <p>Mechanism design</p>
                     </a>
                 </div>
                 <div class="main-cards">
                     <a href="/mf">
                         <img src="/home_page/Machine_Failure_image.png" style="background-color: white" alt="Machine Failure Logo" />
-                        <p>Machine Failure</p>
+                        <p>Machine failure</p>
                     </a>
                 </div>
             </div>
         
             <ul class="mt-0 card-grid-simple">
-                <li><a href="/md">Mechanism Design</a></li>
-                <li><a href="/mf">Machine Failure</a></li>
+                <li><a href="/md">Mechanism design</a></li>
+                <li><a href="/mf">Machine failure</a></li>
             </ul>
         </div>
     </div>
