--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -15,7 +15,7 @@ import Section from "../components/Section.astro";
 
 
   <h1>
-    <strong>Mechanism Design</strong>
+    <strong>Mechanism design</strong>
   </h1>
   <section>
     <p>
@@ -24,9 +24,9 @@ import Section from "../components/Section.astro";
 
 
     <Itemize>
-      <Item> <a href="/dyn/rigid_body_kinematics"> Rigid Body Kinematics </a> which will be utilized in the analysis of planar mechanism and gears.</Item>
-      <Item> <a href="/dyn/rigid_body_kinetics"> Rigid Body Kinetics </a> will be useful for the study of <a href="/md/Instant_Centers?origin=coursemenu">Instant Centers</a> (IC), <a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position Velocity Acceleration</a> (PVA) and <a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic Force Analysis </a> (DFA).</Item>
-      <Item> <a href="/dyn/work_and_energy"> Work and Energy </a> will be utilized in the study of <a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a>.</Item>
+      <Item> <a href="/dyn/rigid_body_kinematics"> Rigid body kinematics </a> which will be utilized in the analysis of planar mechanism and gears.</Item>
+      <Item> <a href="/dyn/rigid_body_kinetics"> Rigid body kinetics </a> will be useful for the study of <a href="/md/Instant_Centers?origin=coursemenu">Instant centers</a> (IC), <a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position velocity acceleration</a> (PVA) and <a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic force analysis </a> (DFA).</Item>
+      <Item> <a href="/dyn/work_and_energy"> Work and energy </a> will be utilized in the study of <a href="/md/Virtual_Work?origin=coursemenu">Virtual work</a>.</Item>
     </Itemize>
 
     <p>
@@ -39,12 +39,12 @@ import Section from "../components/Section.astro";
         <Item> Gears will cover the key parts features of a gear, as well as helpful tools for the analysis of gear systems.</Item>
         -->
 
-        <Item><a href="/md/Graphical_Linkage_Synthesis?origin=coursemenu">Graphical Linkage Synthesis</a> will explore procedures for creating mechanims that move along user specified paths, or between user specified locations </Item>
-        <Item><a href="/md/Instant_Centers?origin=coursemenu">Instant Centers</a> examines what an instant center is, how they can be identified, and how instant centers can be used to find force and velocity ratios in mechanisms </Item>
+        <Item><a href="/md/Graphical_Linkage_Synthesis?origin=coursemenu">Graphical linkage synthesis</a> will explore procedures for creating mechanims that move along user specified paths, or between user specified locations </Item>
+        <Item><a href="/md/Instant_Centers?origin=coursemenu">Instant centers</a> examines what an instant center is, how they can be identified, and how instant centers can be used to find force and velocity ratios in mechanisms </Item>
         <Item><a href="/md/Cams?origin=coursemenu">Cams</a> focuses on the different classifications of cams, as well as the steps required to design a cam profile according to the fundemental law of cam design </Item>
-        <Item><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position Velocity Acceleration</a> demonstrates a method for computing the positon, velocity, and acceleration of a mechanism </Item>
-        <Item><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic Force Analysis</a> examines a method to compute the forces and torques on each part of a mechanism </Item>
-        <Item><a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a> examines an easier method to compute external forces and torques if the internal forces are unimportant </Item>
+        <Item><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position velocity acceleration</a> demonstrates a method for computing the positon, velocity, and acceleration of a mechanism </Item>
+        <Item><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic force analysis</a> examines a method to compute the forces and torques on each part of a mechanism </Item>
+        <Item><a href="/md/Virtual_Work?origin=coursemenu">Virtual work</a> examines an easier method to compute external forces and torques if the internal forces are unimportant </Item>
         <Item><a href="/md/Balancing?origin=coursemenu">Balancing</a> investigates the loads on rotating machinery as well as methods for minimizing them </Item>
         <!--
         <Item> </Item>
@@ -61,12 +61,12 @@ import Section from "../components/Section.astro";
     <ol>
       <!-- <li><a href="/md/Planar_Mechanisms?origin=coursemenu">Planar Mechanisms</a></li>-->
       <!--<li><a href="/md/Gears?origin=coursemenu">Gears</a></li>-->
-      <li><a href="/md/Graphical_Linkage_Synthesis?origin=coursemenu">Graphical Linkage Synthesis</a></li>
-      <li><a href="/md/Instant_Centers?origin=coursemenu">Instant Centers</a></li>
+      <li><a href="/md/Graphical_Linkage_Synthesis?origin=coursemenu">Graphical linkage synthesis</a></li>
+      <li><a href="/md/Instant_Centers?origin=coursemenu">Instant centers</a></li>
       <li><a href="/md/Cams?origin=coursemenu">Cams</a></li>
-      <li><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position Velocity Acceleration</a></li>
-      <li><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic Force Analysis</a></li>
-      <li><a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a></li>
+      <li><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position velocity acceleration</a></li>
+      <li><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic force analysis</a></li>
+      <li><a href="/md/Virtual_Work?origin=coursemenu">Virtual work</a></li>
       <li><a href="/md/Balancing?origin=coursemenu">Balancing</a></li>
 
     </ol>
