--- a/src/pages/mf.astro
+++ b/src/pages/mf.astro
@@ -10,17 +10,17 @@ import "../../public/static/css/course_home_pages.css"
 
 
   <h1>
-    <strong>Machine Failure</strong>
+    <strong>Machine failure</strong>
   </h1>
   <section class="mt-sm-4 mt-2">
     <ol>
-      <!-- <li><a href="/mf/Loads_on_Machines?origin=coursemenu">Loads on Machines</a></li>-->
-      <!--<li><a href="/mf/Clutches_and_Brakes?origin=coursemenu">Clutches and Brakes</a></li>-->
+      <!-- <li><a href="/mf/Loads_on_Machines?origin=coursemenu">Loads on machines</a></li>-->
+      <!--<li><a href="/mf/Clutches_and_Brakes?origin=coursemenu">Clutches and brakes</a></li>-->
       <!--<li><a href="/mf/Stress?origin=coursemenu">Stress</a></li>-->
-      <li><a href="/mf/Stress_Concentrations?origin=coursemenu">Stress Concentrations</a></li>
-      <li><a href="/mf/Failure_Theories?origin=coursemenu">Failure Theories</a></li>
+      <li><a href="/mf/Stress_Concentrations?origin=coursemenu">Stress concentrations</a></li>
+      <li><a href="/mf/Failure_Theories?origin=coursemenu">Failure theories</a></li>
       <!--<li><a href="/mf/Fatigue?origin=coursemenu">Fatigue</a></li>-->
-      <li><a href="/mf/Threaded_Components?origin=coursemenu">Threaded Components</a></li>
+      <li><a href="/mf/Threaded_Components?origin=coursemenu">Threaded components</a></li>
       <!--<li><a href="/mf/Buckling?origin=coursemenu">Buckling</a></li>-->
       <!--<li><a href="/mf/Gears?origin=coursemenu">Gears</a></li>-->
       <!--<li><a href="/mf/Impact?origin=coursemenu">Impact</a></li>-->
