--- a/src/pages/sol.astro
+++ b/src/pages/sol.astro
@@ -9,10 +9,10 @@ import CourseCard from "../components/course_menus/CourseCard.astro"
 import "../../public/static/css/course_home_pages.css"
 ---
 
-<Layout title="Solid Mechanics">
+<Layout title="Solid mechanics">
 
   <div class="mt-sm-4 mt-2">
-    <SimplifiedView id="here" title="Solid Mechanics" title_style="h1 fw-bold" style="enumerate">
+    <SimplifiedView id="here" title="Solid mechanics" title_style="h1 fw-bold" style="enumerate">
       <CourseCard href="/sol/stress" img_src="/sol/stress/Stress Element.png" title="Stress">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/stress#units'>Units</a></li>
@@ -54,7 +54,7 @@ import "../../public/static/css/course_home_pages.css"
           </li>
         </ul>
       </CourseCard>
-      <CourseCard href="/sol/material_properties" img_src="/sol/home_page/material_properties.png" title="Material Properties">
+      <CourseCard href="/sol/material_properties" img_src="/sol/home_page/material_properties.png" title="Material properties">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/material_properties#stress-strain_diagram'>Stress-Strain Diagram</a>
               <ul class='list-group list-group-flush py-0'> 
@@ -70,7 +70,7 @@ import "../../public/static/css/course_home_pages.css"
           </li> 
         </ul>
       </CourseCard> 
-      <CourseCard href="/sol/axial_loading" img_src="/sol/home_page/axial_loading.png" title="Axial Loading">
+      <CourseCard href="/sol/axial_loading" img_src="/sol/home_page/axial_loading.png" title="Axial loading">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/axial_loading#notation_and_convention'>Notation and Convention</a></li>
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/axial_loading#saint-venants_principle_slender_beam_case'>Saint-Venant's Principle: slender beam case</a>
@@ -110,7 +110,7 @@ import "../../public/static/css/course_home_pages.css"
           </li> 
         </ul>
       </CourseCard> 
-      <CourseCard href="/sol/shear_moment_diagrams" img_src="/sta/shear_moment_diagrams/IntLoadRecap.jpg" title="Shear Moment Diagrams">
+      <CourseCard href="/sol/shear_moment_diagrams" img_src="/sta/shear_moment_diagrams/IntLoadRecap.jpg" title="Shear moment diagrams">
         <ul class='list-group list-group-flush py-0'>
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/shear_moment_diagrams#shear_moment_diagrams'>Internal Forces</a></li>  
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/shear_moment_diagrams#sign_conventions'>Sign Conventions</a></li> 
@@ -136,7 +136,7 @@ import "../../public/static/css/course_home_pages.css"
           </li>  
         </ul>
       </CourseCard> 
-      <CourseCard href="/sol/transverse_shear" img_src="/sol/home_page/transverse_shear.png" title="Transverse Shear">
+      <CourseCard href="/sol/transverse_shear" img_src="/sol/home_page/transverse_shear.png" title="Transverse shear">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/transverse_shear#shear_in_beams'>Shear Stress in Beams</a></li>
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/transverse_shear#avg_shear_stress'>Average Shear Stress</a>
@@ -147,7 +147,7 @@ import "../../public/static/css/course_home_pages.css"
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/transverse_shear#shear_flow'>Built-up Members/Beams: Shear Flow</a></li> 
         </ul>
       </CourseCard> 
-      <CourseCard href="/sol/pressure_vessels" img_src="/sol/home_page/pressure_vessels.png" title="Pressure Vessels">
+      <CourseCard href="/sol/pressure_vessels" img_src="/sol/home_page/pressure_vessels.png" title="Pressure vessels">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/pressure_vessels#thin-walled-pressure-vessels'>Thin-Walled Pressure Vessels</a>
           
@@ -158,13 +158,13 @@ import "../../public/static/css/course_home_pages.css"
           </li>
         </ul>
       </CourseCard> 
-      <CourseCard href="/sol/combined_loading" img_src="/sol/home_page/combined_loading.png" title="Combined Loading">
+      <CourseCard href="/sol/combined_loading" img_src="/sol/home_page/combined_loading.png" title="Combined loading">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/combined_loading#load-summary'>Types of Loading Summary</a></li>
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/combined_loading#stress'>Stress Under Combined Loads</a></li>  
         </ul>
       </CourseCard> 
-      <CourseCard href="/sol/stress_transformation" img_src="/sol/home_page/stress_transformation.png" title="Stress Transformation">
+      <CourseCard href="/sol/stress_transformation" img_src="/sol/home_page/stress_transformation.png" title="Stress transformation">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/stress_transformation#general-state'>General State of Stress</a></li>
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/stress_transformation#sign-convention-general'>Sign Convention</a></li> 
@@ -187,7 +187,7 @@ import "../../public/static/css/course_home_pages.css"
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/stress_transformation#max-shear-stress'>Maximum Shear Stress</a></li>   
         </ul>
       </CourseCard> 
-      <CourseCard href="/sol/failure_theories" img_src="/sol/home_page/failure_theories.png" title="Failure Theories">
+      <CourseCard href="/sol/failure_theories" img_src="/sol/home_page/failure_theories.png" title="Failure theories">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/failure_theories#tresca'>Maximum Shear Stress (Tresca) Criterion</a>
               <ul class='list-group list-group-flush py-0'> 
@@ -203,7 +203,7 @@ import "../../public/static/css/course_home_pages.css"
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#max-normal'>Maximum Normal Stress Criterion</a></li>
         </ul>
       </CourseCard> 
-      <CourseCard href="/sol/beam_deflection" img_src="/sol/home_page/beam_deflection.png" title="Beam Deflection">
+      <CourseCard href="/sol/beam_deflection" img_src="/sol/home_page/beam_deflection.png" title="Beam deflection">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/beam_deflection#sign-conventions'>Sign Conventions</a></li>
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/beam_deflection#boundary-conditions'>Boundary Conditions</a></li>
@@ -236,17 +236,17 @@ import "../../public/static/css/course_home_pages.css"
 
       <li slot="list"><a href="/sol/stress?origin=coursemenu">Stress</a></li>
       <li slot="list"><a href="/sol/strain?origin=coursemenu">Strain</a></li>
-      <li slot="list"><a href="/sol/material_properties?origin=coursemenu">Material Properties</a></li>
-      <li slot="list"><a href="/sol/axial_loading?origin=coursemenu">Axial Loading</a></li>
+      <li slot="list"><a href="/sol/material_properties?origin=coursemenu">Material properties</a></li>
+      <li slot="list"><a href="/sol/axial_loading?origin=coursemenu">Axial loading</a></li>
       <li slot="list"><a href="/sol/torsion?origin=coursemenu">Torsion</a></li>
-      <li slot="list"><a href="/sol/shear_moment_diagrams?origin=coursemenu">Shear Moment Diagrams</a></li>
+      <li slot="list"><a href="/sol/shear_moment_diagrams?origin=coursemenu">Shear moment diagrams</a></li>
       <li slot="list"><a href="/sol/bending?origin=coursemenu">Bending</a></li>
-      <li slot="list"><a href="/sol/transverse_shear?origin=coursemenu">Transverse Shear</a></li>
-      <li slot="list"><a href="/sol/pressure_vessels?origin=coursemenu">Pressure Vessels</a></li>
-      <li slot="list"><a href="/sol/combined_loading?origin=coursemenu">Combined Loading</a></li>
-      <li slot="list"><a href="/sol/stress_transformation?origin=coursemenu">Stress Transformation</a></li>
-      <li slot="list"><a href="/sol/failure_theories?origin=coursemenu">Failure Theories</a></li>
-      <li slot="list"><a href="/sol/beam_deflection?origin=coursemenu">Beam Deflection</a></li>
+      <li slot="list"><a href="/sol/transverse_shear?origin=coursemenu">Transverse shear</a></li>
+      <li slot="list"><a href="/sol/pressure_vessels?origin=coursemenu">Pressure vessels</a></li>
+      <li slot="list"><a href="/sol/combined_loading?origin=coursemenu">Combined loading</a></li>
+      <li slot="list"><a href="/sol/stress_transformation?origin=coursemenu">Stress transformation</a></li>
+      <li slot="list"><a href="/sol/failure_theories?origin=coursemenu">Failure theories</a></li>
+      <li slot="list"><a href="/sol/beam_deflection?origin=coursemenu">Beam deflection</a></li>
       <li slot="list"><a href="/sol/buckling?origin=coursemenu">Buckling</a></li>
     </SimplifiedView>
   </div>
