--- a/src/pages/sta.astro
+++ b/src/pages/sta.astro
@@ -14,20 +14,20 @@ import "../../public/static/css/course_home_pages.css"
   <section class="mt-sm-4 mt-2">
     <ol>
       <li><a href="/sta/introduction?origin=coursemenu">Introduction</a></li>
-      <li><a href="/sta/cartesian_coordinates?origin=coursemenu">Cartesian Coordinates</a></li>
-      <li><a href="/sta/vectors_scalars?origin=coursemenu">Vectors and Scalars</a></li>
-      <li><a href="/sta/free_body_diagrams?origin=coursemenu">Free Body Diagrams</a></li>
+      <li><a href="/sta/cartesian_coordinates?origin=coursemenu">Cartesian coordinates</a></li>
+      <li><a href="/sta/vectors_scalars?origin=coursemenu">Vectors and scalars</a></li>
+      <li><a href="/sta/free_body_diagrams?origin=coursemenu">Free body diagrams</a></li>
       <li><a href="/sta/moments?origin=coursemenu">Moments</a></li>
-      <li><a href="/sta/force_systems?origin=coursemenu">Force Systems</a></li>
-      <li><a href="/sta/reaction_forces?origin=coursemenu">Reaction Forces</a></li>
+      <li><a href="/sta/force_systems?origin=coursemenu">Force systems</a></li>
+      <li><a href="/sta/reaction_forces?origin=coursemenu">Reaction forces</a></li>
       <li><a href="/sta/trusses?origin=coursemenu">Trusses</a></li>
-      <li><a href="/sta/frames_and_machines?origin=coursemenu">Frames and Machines</a></li>
-      <li><a href="/sta/shear_moment_diagrams?origin=coursemenu">Internal Forces</a></li>
+      <li><a href="/sta/frames_and_machines?origin=coursemenu">Frames and machines</a></li>
+      <li><a href="/sta/shear_moment_diagrams?origin=coursemenu">Internal forces</a></li>
       <li><a href="/sta/friction?origin=coursemenu">Friction</a></li>
-      <li><a href="/sta/centers_of_mass?origin=coursemenu">Center of Mass</a></li>
-      <li><a href="/sta/hydrostatic_fluid_pressure?origin=coursemenu">Hydrostatic Fluid Pressure</a></li>
-      <li><a href="/sta/moment_of_inertia?origin=coursemenu">Moment Of Inertia</a></li>
-      <li><a href="/sta/virtual_work?origin=coursemenu">Virtual Work</a></li>
+      <li><a href="/sta/centers_of_mass?origin=coursemenu">Center of mass</a></li>
+      <li><a href="/sta/hydrostatic_fluid_pressure?origin=coursemenu">Hydrostatic fluid pressure</a></li>
+      <li><a href="/sta/moment_of_inertia?origin=coursemenu">Moment of inertia</a></li>
+      <li><a href="/sta/virtual_work?origin=coursemenu">Virtual work</a></li>
     </ol>
   </section>
   <section class="mt-sm-4 mt-2">
