--- a/src/pages/thermodynamics.astro
+++ b/src/pages/thermodynamics.astro
@@ -15,11 +15,11 @@ import "../../public/static/css/course_home_pages.css"
 
   <section class="mt-sm-4 mt-2">
     <ol>
-      <li><a href="/thermodynamics/thermodynamic_systems?origin=coursemenu">Thermodynamic Systems</a></li>
+      <li><a href="/thermodynamics/thermodynamic_systems?origin=coursemenu">Thermodynamic systems</a></li>
       <li><a href="/thermodynamics/substances?origin=coursemenu">Substances</a></li>
-      <li><a href="/thermodynamics/heat_and_work?origin=coursemenu">Heat and Work</a></li>
-      <li><a href="/thermodynamics/mass_and_energy_balances?origin=coursemenu">Mass and Energy Balances</a></li>
-      <li><a href="/thermodynamics/complex_problems?origin=coursemenu">Complex Problems</a></li>
+      <li><a href="/thermodynamics/heat_and_work?origin=coursemenu">Heat and work</a></li>
+      <li><a href="/thermodynamics/mass_and_energy_balances?origin=coursemenu">Mass and energy balances</a></li>
+      <li><a href="/thermodynamics/complex_problems?origin=coursemenu">Complex problems</a></li>
       <li><a href="/thermodynamics/thermodynamic_devices?origin=coursemenu">Thermodynamic devices</a></li>
       <li><a href="/thermodynamics/entropy?origin=coursemenu">Entropy</a></li>
       <li><a href="/thermodynamics/cycles?origin=coursemenu">Cycles</a></li>
